2011-09-08  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/display.c: Fix a bug in manager selection handling. Set all
	required fields of the client message event. Call XSync before
	changing the error handler. [Timo Korvola]

2011-07-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/int/kde.jl
	* lisp/sawfish/wm/int/gnome.jl
	* lisp/sawfish/wm/int/xfce.jl: added entries for launching the
	desktop's menu-editor

	* lisp/sawfish/wm/menus.jl
	* lisp/sawfish/wm/commands/poweroff.jl: use SSD as fallback for
	poweroff commands (if none onf the integration modules are loaded).
	Add lockdown and logout stuff to poweroff.

2011-07-25  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/single-window-mode.jl: added (my vision of)
	single-window-mode

2011-07-23  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/kde.jl: added user-switch suspend and
	hibernate entries for KDE4

2011-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/windows.jl: fixed warping to a shaded window

2011-07-06  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl
	* themes/Elberg-tabbed/theme.jl
	* themes/StyleTab/theme.jl: simplified set-tab-adjustments

2011-06-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/xfce.jl: added menu-entries for locking
	the screen

2011-06-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/xfce.jl: added hibernate and suspend
	entries to xfce-integration module

2011-05-21  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/changelog
	* debian/rules
	* debian/postinst
	* debian/sawfish-data.postinst
	* Makefile.in: make packaging scripts work

2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
